// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer should change the alignments of the tabs 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c1 {
  background: #ffffff;
  border-bottom: 1px solid;
  border-bottom-color: #BDBDBD;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  opacity: 100%;
}

.c3 {
  min-height: 35px;
  padding: 0 12px;
  border-bottom: 4px solid;
  border-bottom-color: #ffffff;
}

.c3:hover {
  border-bottom-color: #000000;
}

.c4 {
  font-family: Inter;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  margin: 10px 0;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3"
        value="Tab 1"
      >
        <p
          class="c4"
        >
          Tab 1
        </p>
      </div>
      <div
        class="c2 c3"
        value="Tab 2"
      >
        <p
          class="c4"
        >
          Tab 2
        </p>
      </div>
      <div
        class="c2 c3"
        value="Tab 3"
      >
        <p
          class="c4"
        >
          Tab 3
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Spacer should hide the divider 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 {
  background: #ffffff;
  border-bottom: 1px solid;
  border-bottom-color: #ffffff;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  opacity: 100%;
}

.c3 {
  min-height: 35px;
  padding: 0 12px;
  border-bottom: 4px solid;
  border-bottom-color: #ffffff;
}

.c3:hover {
  border-bottom-color: #000000;
}

.c4 {
  font-family: Inter;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  margin: 10px 0;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3"
        value="Tab 1"
      >
        <p
          class="c4"
        >
          Tab 1
        </p>
      </div>
      <div
        class="c2 c3"
        value="Tab 2"
      >
        <p
          class="c4"
        >
          Tab 2
        </p>
      </div>
      <div
        class="c2 c3"
        value="Tab 3"
      >
        <p
          class="c4"
        >
          Tab 3
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Spacer should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 {
  background: #ffffff;
  border-bottom: 1px solid;
  border-bottom-color: #BDBDBD;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  opacity: 100%;
}

.c3 {
  min-height: 35px;
  padding: 0 12px;
  border-bottom: 4px solid;
  border-bottom-color: #ffffff;
}

.c3:hover {
  border-bottom-color: #000000;
}

.c4 {
  font-family: Inter;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  margin: 10px 0;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3"
        value="Tab 1"
      >
        <p
          class="c4"
        >
          Tab 1
        </p>
      </div>
      <div
        class="c2 c3"
        value="Tab 2"
      >
        <p
          class="c4"
        >
          Tab 2
        </p>
      </div>
      <div
        class="c2 c3"
        value="Tab 3"
      >
        <p
          class="c4"
        >
          Tab 3
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Spacer should show an active tab when an initial value is passed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 {
  background: #ffffff;
  border-bottom: 1px solid;
  border-bottom-color: #BDBDBD;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  opacity: 100%;
}

.c3 {
  min-height: 35px;
  padding: 0 12px;
  border-bottom: 4px solid;
  border-bottom-color: #000000;
}

.c3:hover {
  border-bottom-color: #000000;
}

.c5 {
  min-height: 35px;
  padding: 0 12px;
  border-bottom: 4px solid;
  border-bottom-color: #ffffff;
}

.c5:hover {
  border-bottom-color: #000000;
}

.c4 {
  font-family: Inter;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  margin: 10px 0;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3"
        value="Tab 1"
      >
        <p
          class="c4"
        >
          Tab 1
        </p>
      </div>
      <div
        class="c2 c5"
        value="Tab 2"
      >
        <p
          class="c4"
        >
          Tab 2
        </p>
      </div>
      <div
        class="c2 c5"
        value="Tab 3"
      >
        <p
          class="c4"
        >
          Tab 3
        </p>
      </div>
    </div>
  </div>
</body>
`;
